# tscheduler

./: .gitignore  README.md  pyproject.toml
examples/: README.md  basic-task.xml  run-in-user-context.xml  set-working-directory.xml  trigger-on-startup.xml
parsing/: parse_configs.py
schshell/: __init__.py  __main__.py  logger.py  taskhandler.py
schshell/lib/: taskhandler.py
schshell/lib/commands/: __init__.py  create.py  delete.py  disable.py  enable.py  enum.py  hijack.py  start.py  stop.py
schshell/lib/models/: __init__.py  hijack.py  principal.py
tests/: test_schshell.py
tscheduler/: __init__.py  __main__.py  logger.py
tscheduler/lib/: pyclone.py  taskhandler.py  xmlhandler.py
tscheduler/lib/commands/: __init__.py  create.py  delete.py  disable.py  enable.py  enum.py  hijack.py  register.py  start.py  stop.py
tscheduler/lib/models/: __init__.py
