[tool.poetry]
name = "schshell"
version = "0.1.0"
description = ""
authors = ["Tw1sm <mcreel31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
impacket = "^0.11.0"
rich = "^13.7.1"
xmltodict = "^0.13.0"
typer = "^0.12.3"
pefile = "2019.4.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
schshell = "schshell.__main__:app"